--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 ## What is TagR?
 
-TagR is SHARE's R package for topic tagging using machine learning. Using predefined topics and a labelled data set, it allows the user to find the probability that a post belongs to a particular topic.
+TagR is SHARE's R package for topic tagging using machine learning. Using predefined topics and a labelled data set, it allows the user to find the probability that an unlabelled post belongs to a particular topic.
 
 This package is used by running through the following steps:
 
@@ -36,16 +36,7 @@ This package is used by running through the following steps:
 
 You can install the released version of TagR from [CRAN](https://CRAN.R-project.org) with:
 
-``` r
-install.packages("TagR")
-```
 
-And the development version from [GitHub](https://github.com/) with:
-
-``` r
-# install.packages("devtools")
-devtools::install_github("rosepeglershare/TagR")
-```
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
@@ -55,18 +46,3 @@ library(TagR)
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
