--- a/vignettes/full_IT_DEV_example.Rmd
+++ b/vignettes/full_IT_DEV_example.Rmd
@@ -40,9 +40,15 @@ We will go through the following steps:
 The labelled dataset consists of 644 tweets where the author has been identified as either an IT professional, a developer, or neither.
 The unlabelled dataset consists of 644 tweets where the author has not yet been identified.
 
+
 ```{r}
 labelled_raw <- TagR::labelled
 unlabelled_raw <- TagR::unlabelled
+```
+
+```{r, echo=FALSE}
+rownames(labelled_raw) <- NULL
+rownames(unlabelled_raw) <- NULL
 ```
 
 The labelled and unlabelled datasets have the following variables:
@@ -186,7 +192,7 @@ The parameters we are going to use are:
 * colsample_bytree: The subsample ratio of columns when constructing each tree. Subsampling occurs once for every tree constructed.
 * min_child_weight: Minimum sum of instance weight (hessian) needed in a child. If the tree partition step results in a leaf node with the sum of instance weight less than min_child_weight, then the building process will give up further partitioning.
 
-The "hyperparameter_tuning" function goes through a number of random values for each parameter and finds the set of parameters that produced the highest accuracy score. The number of iterations should be kept high to increase the chance of finding better parameters, but for the purpose of this example I will use a lower number of 500.
+The "hyperparameter tuning" function goes through a number of random values for each parameter and finds the set of parameters that produced the highest accuracy score. The number of iterations should be kept high to increase the chance of finding better parameters, but for the purpose of this example I will use a lower number of 500.
 
 ```{r, results = 'hide'}
 parameters <- hyperparameter_tuning(train_labelled_dtm = train_labelled_dtm,
@@ -198,6 +204,78 @@ parameters <- hyperparameter_tuning(train_labelled_dtm = train_labelled_dtm,
 
 
 ```
+The best parameter sets for each author are:
+
 ```{r, results = "asis", echo=FALSE}
 pander::pandoc.table(parameters)
 ```
+
+## Step 6: Predict authors for unlabelled posts
+
+The next step is to train an Xgboost model for each author using the best parameter set found in the previous step. After training, the model is then used to predict whether the unlabelled posts are written by either author, or neither. 
+
+This function also has the option to use some default parameter values if hyper-parameter tuning has not been performed.
+
+```{r}
+predictions <- predict_topics(unlabelled_raw = unlabelled_raw,
+                              labelled_dtm = full_labelled_dtm,
+                              unlabelled_dtm = unlabelled_dtm,
+                              labels_matrix = full_labels,
+                              text_vars = c('text'),
+                              num_vars = c('reach', 'favourites', 'retweets'),
+                              topics = c('DEV', 'ITPRO'),
+                              parameters_df = parameters,
+                              nrounds = 1000)
+
+models <- predictions$models
+predictions <- predictions$predictions
+
+devmodel <- models$DEV
+itmodel <- models$ITPRO
+```
+
+The output then looks like the following:
+
+```{r, results = "asis", echo=FALSE}
+pander::pandoc.table(predictions[1:3,])
+```
+
+In this case, the model has predicted that none of the first 3 posts are likely to be written by a developer or IT professional.
+
+## Step 7: Build and visualise an explainer
+
+It's all very well that we now have predictions, but it is difficult to tell how the model actually made those predictions, and it would be useful if we could visualise the thought process.
+
+An Xgboost model uses decision trees to make predictions. That is, it will go through a series of **nodes** that will ask different questions, which branch off in different directions depending on the answer. The final decision is the **leaf** of the tree, which will be our prediction.
+
+To better visualise the process, let's first build our explainer. I would like to understand how the algorithm decides the probability of a post being written by a developer.
+
+```{r}
+model_explainer <- build_topic_explainer(full_labelled_dtm = full_labelled_dtm,
+                                         full_labels = full_labels,
+                                         topic = 'DEV',
+                                         devmodel)
+
+```
+
+I would like to see how the model predicted a particular post, so let's see which posts were predicted to be written by a developer, using a probability boundary of 0.7.
+
+```{r}
+devs <- subset(predictions, DEV > 0.7)
+devs['468', 'text']
+```
+
+The comment explainer threshold is set at 0.02 so the graph doesn't become messy and unreadable.
+The resulting graph shows that the inclusion of words such as 'web' and 'dev' (stemmed words) have contributed to the prediction that the post was written by a developer. The lack of some words, such as 'privaci' and 'secur' have also influenced the decision, as these are more common words for an IT professional.
+
+```{r}
+comment_explainer <- explain_comment(xgbmodel = devmodel,
+                                     explainer = model_explainer,
+                                     unlabelled_dtm = unlabelled_dtm,
+                                     comment_index = 55,
+                                     threshold = 0.02)
+
+comment_explainer
+```
+
+
