--- a/vignettes/full_IT_DEV_example.Rmd
+++ b/vignettes/full_IT_DEV_example.Rmd
@@ -21,6 +21,7 @@ library(pander)
 library(TagR)
 library(tm)
 library(tidyverse)
+library(DT)
 ```
 
 This notebook provides a full example of how a user can utilise the TagR package.
@@ -186,7 +187,7 @@ Xgboost models use a range of different parameters, the values of which can affe
 
 The parameters we are going to use are:
 
-* max_depth: Maximum depth of a tree. Increasing this value will make the model more complex and more likely to overfit.}
+* max_depth: Maximum depth of a tree. Increasing this value will make the model more complex and more likely to overfit.
 * eta: Step size shrinkage used in update to prevent overfitting. 
 * subsample: Subsample ratio of the training instances. Setting it to 0.5 means that XGBoost would randomly sample half of the training data prior to growing trees and this will prevent overfitting. 
 * colsample_bytree: The subsample ratio of columns when constructing each tree. Subsampling occurs once for every tree constructed.
@@ -207,7 +208,7 @@ parameters <- hyperparameter_tuning(train_labelled_dtm = train_labelled_dtm,
 The best parameter sets for each author are:
 
 ```{r, results = "asis", echo=FALSE}
-pander::pandoc.table(parameters)
+datatable(parameters, rownames = FALSE, options = list(scrollX = T))
 ```
 
 ## Step 6: Predict authors for unlabelled posts
@@ -216,7 +217,7 @@ The next step is to train an Xgboost model for each author using the best parame
 
 This function also has the option to use some default parameter values if hyper-parameter tuning has not been performed.
 
-```{r}
+```{r, results = 'hide'}
 predictions <- predict_topics(unlabelled_raw = unlabelled_raw,
                               labelled_dtm = full_labelled_dtm,
                               unlabelled_dtm = unlabelled_dtm,
@@ -237,7 +238,8 @@ itmodel <- models$ITPRO
 The output then looks like the following:
 
 ```{r, results = "asis", echo=FALSE}
-pander::pandoc.table(predictions[1:3,])
+#pander::pandoc.table(predictions[1:3,])
+datatable(predictions[1:3,], rownames = FALSE, options = list(scrollX = T))
 ```
 
 In this case, the model has predicted that none of the first 3 posts are likely to be written by a developer or IT professional.
@@ -250,12 +252,11 @@ An Xgboost model uses decision trees to make predictions. That is, it will go th
 
 To better visualise the process, let's first build our explainer. I would like to understand how the algorithm decides the probability of a post being written by a developer.
 
-```{r}
+```{r, results='hide'}
 model_explainer <- build_topic_explainer(full_labelled_dtm = full_labelled_dtm,
                                          full_labels = full_labels,
                                          topic = 'DEV',
                                          devmodel)
-
 ```
 
 I would like to see how the model predicted a particular post, so let's see which posts were predicted to be written by a developer, using a probability boundary of 0.7.
@@ -268,13 +269,14 @@ devs['468', 'text']
 The comment explainer threshold is set at 0.02 so the graph doesn't become messy and unreadable.
 The resulting graph shows that the inclusion of words such as 'web' and 'dev' (stemmed words) have contributed to the prediction that the post was written by a developer. The lack of some words, such as 'privaci' and 'secur' have also influenced the decision, as these are more common words for an IT professional.
 
-```{r}
+```{r, results='hide'}
 comment_explainer <- explain_comment(xgbmodel = devmodel,
                                      explainer = model_explainer,
                                      unlabelled_dtm = unlabelled_dtm,
                                      comment_index = 55,
                                      threshold = 0.02)
-
+```
+```{r}
 comment_explainer
 ```
 
